feat!: LazyVim 💤 ➕ 🐇 nvim-depoxy 👉 nvim-lazyb 🧸
Combine my decades-old Vim config — that I recently ported
to Neovim — with LazyVim.

- BWARE: This is very much an opinionated, personal project!

  - Including some plugin paths — to use nvim-lazy, you'd
    need to also clone nvim-depoxy (see path below) and
    use the myrepos config to clone the plugin projects.

- nvim-depoxy is a Neovim config I threw together late 2024:

    https://github.com/DepoXy/nvim-depoxy#🐇

- nvim-depoxy is based on a legacy Vim config (that exists
  as a plugin, not as ~/.vimrc config):

    https://github.com/DepoXy/vim-depoxy#🤙

- Much of the nvim-lazyb functionality is implemented by
  legacy Vim plugins that I still maintain, albeit I've
  ported a few features to the Lua config herein.

  - You'll find many of the features under <LocalLeader>.

    - Press \ in Normal mode to conjure the which-key legend.

  - A few features (a minimal set) have been added to the
    LazyVim <Leader> namespace.

  - In addition, you'll discover a typical assortment of
    additional features enabled by autocmd and ftplugin-esque
    wiring.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# vim:tw=0:ts=2:sw=2:et:norl:ft=gitignore
+# Project: https://github.com/landonb/nvim-lazyb#🐝
+
 tt.*
 .tests
 doc/tags
@@ -6,3 +9,15 @@ debug
 foo.*
 *.log
 data
+
+# Private user files.
+/lua/config/private.lua
+/lua/plugins/private.lua
+
+.DS_Store
+
+# Symlink to your personal spell file (track in another repo):
+/spell/en.utf-8.add
+# Compiled spell file (local, untracked):
+/spell/en.utf-8.add.spl
+
